<resources>
    <string name="app_name">My Friends App</string>
    <string name="name_label">Name</string>
    <string name="type_name_hint">Type friend\'s name</string>
    <string name="type_nickname_hint">Type friend\'s nickname (if he/she had)</string>
    <string name="nickname_label">Nickname</string>
    <string name="description_label">Description</string>
    <string name="description_hint">Describe your friend</string>
    <string name="save_friend_button">Save new friend</string>
    <string name="name_is_required">Name is required. Type the Name</string>
    <string name="friend_save_successfully">Friend save successfully</string>
    <string name="list_name_text">Friend name</string>
    <string name="list_photo_friend_description">Friend photo</string>
    <string name="list_nickname_text">Friend\'s nickname</string>
    <string name="list_friends_since_label">Friend since:</string>
    <string name="date_template">01/01/2001</string>
    <string name="add_new_friend_button">Add New Friend</string>
    <string name="photo_friend_description">Friend\'s photo</string>
    <string name="delete_friend_button_label">Delete this friend</string>
    <string name="error_retrieve_friend_detail">An error occurred while trying to retrieve friend details</string>
    <string name="friend_deleted_successfully">Friend deleted successfully</string>
    <string name="detail_friend_title">Friend\'s detail</string>
    <string name="new_friend_title">New friend</string>
</resources>
