<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/friend_photo_image_view_id"
        android:layout_width="wrap_content"
        android:layout_height="188dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/image_default" />

    <ImageButton
        android:id="@+id/take_picture_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/friend_photo_image_view_id"
        android:layout_alignEnd="@+id/friend_photo_image_view_id"
        android:layout_marginRight="30dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/name_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_photo_image_view_id"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/name_label" />

    <EditText
        android:id="@+id/name_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_label_id"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="@string/type_name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/nickname_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_edit_id"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/nickname_label" />

    <EditText
        android:id="@+id/nickname_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nickname_label_id"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="@string/type_nickname_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nickname_edit_id"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/description_label" />

    <EditText
        android:id="@+id/description_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/description_label"
        android:ems="10"
        android:hint="@string/description_hint"
        android:layout_marginHorizontal="10dp"
        android:inputType="text" />

    <Button
        android:id="@+id/save_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_edit_id"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/save_friend_button" />
</RelativeLayout>